--- a/FinalExamProject/src/main/resources/app/view/Retirement.fxml
+++ b/FinalExamProject/src/main/resources/app/view/Retirement.fxml
@@ -10,8 +10,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pkgApp.controller.RetirementController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pkgApp.controller.RetirementController">
    <bottom>
       <HBox prefHeight="35.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
    </bottom>
@@ -24,15 +25,18 @@
    <top>
       <HBox alignment="TOP_CENTER" prefHeight="45.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Retirement Calculator" />
+            <Label prefHeight="45.0" prefWidth="176.0" text="Retirement Calculator" textAlignment="RIGHT">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
          </children>
       </HBox>
    </top>
    <center>
-      <GridPane BorderPane.alignment="CENTER">
+      <GridPane prefHeight="448.0" prefWidth="307.0" BorderPane.alignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="208.66668701171875" minWidth="10.0" prefWidth="164.0000203450521" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="252.6666717529297" minWidth="10.0" prefWidth="236.6666463216146" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -46,17 +50,18 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Save Each Month" />
-            <Label text="Years to Work" GridPane.rowIndex="1" />
-            <Label text="Annual Return" GridPane.rowIndex="2" />
-            <Label text="What you need to save" GridPane.rowIndex="4" />
-            <Label text="Years Retired" GridPane.rowIndex="6" />
-            <Label text="Annual Return" GridPane.rowIndex="7" />
-            <Label text="Required Income" GridPane.rowIndex="8" />
-            <Label text="Monthly SSI" GridPane.rowIndex="9" />
-            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="10">
+            <Label text="Years to Work" GridPane.rowIndex="2" />
+            <Label text="Annual Return" GridPane.rowIndex="3" />
+            <Label text="What you need to save" GridPane.rowIndex="5" />
+            <Label text="Years Retired" GridPane.rowIndex="7" />
+            <Label text="Annual Return" GridPane.rowIndex="8" />
+            <Label text="Required Income" GridPane.rowIndex="9" />
+            <Label text="Monthly SSI" GridPane.rowIndex="10" />
+            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="11">
                <children>
                   <Button mnemonicParsing="false" onAction="#btnClear" text="Clear">
                      <HBox.margin>
@@ -72,7 +77,14 @@
                   <Insets />
                </GridPane.margin>
             </HBox>
-            <TextField fx:id="txtYearsToWork" prefHeight="25.0" prefWidth="62.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtYearsToWork" prefHeight="25.0" prefWidth="85.0" promptText="How many years will you work?" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtAnnReturnWork" layoutX="211.0" layoutY="57.0" prefHeight="25.0" prefWidth="85.0" promptText="Percentage, between 0% and 20%." GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="txtSaveEachMnth" layoutX="211.0" layoutY="137.0" prefHeight="25.0" prefWidth="85.0" promptText="Calculated for you." GridPane.columnIndex="1" />
+            <TextField fx:id="txtNeedToSave" layoutX="211.0" layoutY="17.0" prefHeight="25.0" prefWidth="85.0" promptText="Calculated for you." GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="txtYearsRetired" layoutX="211.0" layoutY="217.0" prefHeight="25.0" prefWidth="85.0" promptText="How long will you be retired?" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <TextField fx:id="txtAnnReturnRet" layoutX="211.0" layoutY="217.0" prefHeight="25.0" prefWidth="85.0" promptText="Percentage, between 0% and 3%." GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <TextField fx:id="txtReqIncome" layoutX="211.0" layoutY="137.0" prefHeight="25.0" prefWidth="85.0" promptText="Income you need, every month." GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <TextField fx:id="txtSSI" layoutX="211.0" layoutY="337.0" prefHeight="25.0" prefWidth="85.0" promptText="Money from Social Security each month." GridPane.columnIndex="1" GridPane.rowIndex="10" />
          </children>
       </GridPane>
    </center>
